# wireguard-rs

./: .gitignore  Cargo.toml
examples/: client.rs
src/: device.rs  lib.rs  main.rs
src/configuration/: config.rs
src/platform/: mod.rs  tun.rs
src/platform/bsd/: mod.rs  udp.rs
src/platform/linux/: mod.rs  udp.rs
src/platform/macos/: mod.rs  udp.rs
src/platform/unix/: mod.rs  tun.rs
src/wireguard/: workers.rs
src/wireguard/handshake/: macs.rs
src/wireguard/router/: peer.rs
