[package]
authors = ["Mathias Hall-Andersen <mathias@hall-andersen.dk>"]
edition = "2021"
license = "MIT"
name = "wireguard-rs"
version = "0.1.4"

[lib]
crate-type = ["lib"]

[[bin]]
name = "wireguard-rs"
path = "src/main.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[dependencies]
aead = "^0.3"
arraydeque = "0.4.5"
base64 = "0.13"
blake2 = "^0.9"
byteorder = "1.3"
chacha20poly1305 = "^0.7"
clear_on_drop = "0.2.3"
cpuprofiler = {version = "*", optional = true}
crossbeam-channel = "^0.5"
dashmap = "^4.0"
digest = "^0.9"
env_logger = "^0.8"
generic-array = "^0.14"
hex = "0.4"
hjul = "0.2.2"
hmac = "^0.10"
log = {version = "0.4", features = ["max_level_trace", "release_max_level_info"]}
num_cpus = "^1.10"
parking_lot = "^0.11"
rand = "^0.7"
rand_core = "^0.5"
ring = "0.16"
spin = "0.7"
subtle = "^2.4"
#tun-rs = { git = "https://github.com/kvnallsn/tun-rs.git", branch = "freebsd" }
tun-rs = { path = "../tun-rs" }
x25519-dalek = "^1.1"
zerocopy = "0.3"

[dependencies.treebitmap]
package = "ip_network_table-deps-treebitmap"
version = "0.5.0"

[target.'cfg(unix)'.dependencies]
libc = "^0.2"
nix = "0.23"

[target.'cfg(target_os = "macos")'.dependencies]
ioctl-sys = "0.6"
page_size = "0.4"
nix = "0.23"

[features]
profiler = ["cpuprofiler"]
start_up = []

[dev-dependencies]
color-eyre = "0.5"
ctrlc = "^3.2"
pnet = "^0.27"
proptest = "^0.10"
rand_chacha = "^0.2"
tracing-subscriber = "0.3"
tracing = "0.1"
